--- a/css/sass/_nav.scss
+++ b/css/sass/_nav.scss
@@ -1,8 +1,24 @@
 .nav {
   height: 50px;
-  max-width: 100%;
+  width: 100%;
+  display: block;
   background-color: $nav;
-}
-  body {
+  clear: both;
+  padding: 0;
+  margin: 0;
+  ul {
+    list-style: none;
     padding: 0;
+    margin: 0;
   }
+  ul li {
+    display: inline-block;
+    float: right;
+    margin: 0 10px;
+    border-left: 1px solid $default;
+  }
+  ul li a {
+    color: white;
+  }
+
+}
